<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hightech.arcade.JungleRun.GameOver">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/junglerun2d_gameover" />

    <TextView
        android:id="@+id/gameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fredericka_the_great"
        android:text="@string/game_over"
        android:textColor="#FF5722"
        android:textSize="95sp" />

    <TextView
        android:id="@+id/playAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameOver"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/play_again"
        android:textColor="#000000"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playAgain"
        android:layout_centerInParent="true"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/quit"
        android:textColor="#000000"
        android:textSize="40sp" />

</RelativeLayout>